--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.html",
   "scripts": {
     "build": "vite build && node scripts/build-posts.ts",
-    "preview": "vite preview"
+    "dev": "npm run build && vite preview"
   },
   "devDependencies": {
     "chalk": "^5.6.2",
