--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.html",
   "scripts": {
     "build": "vite build && node scripts/build-posts.ts",
-    "dev": "nodemon --watch src --ext ts,json --exec \"npm run build && vite preview\""
+    "dev": "nodemon --watch src --ext ts,json,css,html --exec \"npm run build && vite preview\""
   },
   "devDependencies": {
     "chalk": "^5.6.2",
