--- a/package.json
+++ b/package.json
@@ -5,24 +5,13 @@
   "license": "MIT",
   "author": "gass-git",
   "type": "module",
-  "main": "index.html",
-  "bin": {
-    "blazed-past-us": "./cli/index.js"
-  },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "scripts": {
-    "build": "vite build && node engine/build-posts.ts",
-    "dev": "nodemon --watch src --ext ts,json,css,html --exec \"npm run build && vite preview\""
+    "build": "vite build && node engine/build-posts.ts"
   },
   "devDependencies": {
-    "chalk": "^5.6.2",
-    "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
-    "rehype-pretty-code": "^0.14.1",
-    "rehype-stringify": "^10.0.1",
-    "remark": "^15.0.1",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.2",
-    "shiki": "^3.15.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.2"
   }
