--- a/src/template/package.json
+++ b/src/template/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "./src/index.html",
   "scripts": {
-    "build": "vite build && node engine/build-posts.ts",
+    "build": "vite build && blazed build",
     "dev": "nodemon --watch src --ext ts,json,css,html --exec \"npm run build && vite preview\""
   },
   "devDependencies": {
