--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "emitDeclarationOnly": true,
-    "allowImportingTsExtensions": true
+    "lib": ["es2021", "es2020", "DOM"],
+    "resolveJsonModule": true
   },
   "include": ["src"]
 }
