feat: is properly building the user's blog bundle

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "bin": {
     "blazed-past-us": "dist/cli/install-scaffold.js",
-    "blaze": "dist/cli/build.js"
+    "blazed": "dist/cli/build.js"
   },
   "scripts": {
     "build": "tsc && xcopy \"src\\template\" \"dist\\template\" /E /I /Y"
