--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blazed-past-us",
   "version": "1.0.0",
-  "description": "A fast dev blog framework where content can be written easily in Markdown via the IDE.",
+  "description": "A fast blog framework for devs, where content can be written easily in Markdown via the IDE.",
   "license": "MIT",
   "author": "gass-git",
   "type": "module",
