--- a/src/template/package.json
+++ b/src/template/package.json
@@ -7,11 +7,12 @@
   "type": "module",
   "main": "./src/index.html",
   "scripts": {
-    "build": "vite build && blazed build",
+    "build": "rimraf dist && vite build && blazed build",
     "dev": "nodemon --watch src --ext ts,json,css,html --exec \"npm run build && vite preview\""
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
+    "rimraf": "^6.1.2",
     "vite": "^7.2.2"
   }
 }
