--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "build": "tsc && xcopy \"src\\template\" \"dist\\template\" /E /I /Y"
   },
   "devDependencies": {
-    "chalk": "^5.6.2",
     "prettier": "^3.6.2",
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "chalk": "^5.6.2",
     "rehype-pretty-code": "^0.14.1",
     "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.2",
-    "typescript": "^5.9.3"
+    "remark-rehype": "^11.1.2"
   }
 }
