--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "license": "MIT",
   "author": "gass-git",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gass-git/blazed-past-us"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
