--- a/src/template/package.json
+++ b/src/template/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon --watch src --ext ts,json,css,html --exec \"npm run build && vite preview\""
   },
   "devDependencies": {
+    "blazed-past-us": "^0.1.2",
     "nodemon": "^3.1.11",
     "rimraf": "^6.1.2",
     "vite": "^7.2.2"
