chore: bumps version to 0.1.4

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "lib": ["es2021", "es2020", "DOM"],
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["node"]
   },
   "include": ["src"]
 }
