--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blazed-past-us",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A static blog framework that lets you write content in Markdown directly from your IDE.",
   "license": "MIT",
   "author": "gass-git",
@@ -23,6 +23,7 @@
     "build": "tsc && xcopy \"src\\template\" \"dist\\template\" /E /I /Y"
   },
   "devDependencies": {
+    "@types/node": "^25.1.0",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3"
   },
