--- a/src/template/src/config.json
+++ b/src/template/src/config.json
@@ -2,5 +2,9 @@
   "posts_data_path": "./posts/data.json",
   "root_id": "root",
   "header_id": "header",
-  "speed_element_id": "speed"
+  "speed_element_id": "speed",
+  "tags": {
+    "javascript": { "color": "#f5dd42" },
+    "typescript": { "color": "#42adf5" }
+  }
 }
