--- a/src/template/src/config.json
+++ b/src/template/src/config.json
@@ -1,5 +1,6 @@
 {
   "posts_data_path": "./posts/data.json",
+  "title_id": "title",
   "root_id": "root",
   "header_id": "header",
   "speed_element_id": "speed",
