--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blazed-past-us",
   "version": "0.1.7",
-  "description": "A static blog framework that lets you write content in Markdown directly from your IDE.",
+  "description": "A static blog framework made for developers that allows content to be written in Markdown directly from the IDE.",
   "license": "MIT",
   "author": "gass-git",
   "type": "module",
