--- a/src/template/package.json
+++ b/src/template/package.json
@@ -15,5 +15,8 @@
     "nodemon": "^3.1.11",
     "rimraf": "^6.1.2",
     "vite": "^7.2.2"
+  },
+  "dependencies": {
+    "three": "^0.182.0"
   }
 }
