--- a/src/template/src/config.json
+++ b/src/template/src/config.json
@@ -4,6 +4,7 @@
   "root_id": "root",
   "header_id": "header",
   "speed_element_id": "speed",
+  "logo_wrapper_id": "logo-wrapper",
   "tags": {
     "javascript": { "color": "#f5dd42" },
     "typescript": { "color": "#42adf5" },
