chore: TS sourceMap set to false

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "module": "ESNext", // ESM modules
 
     // Other Outputs
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true, // generate .d.ts types
     "strict": true, // enable strict type checking
     "moduleResolution": "Node",
